--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,8 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/secretfriends
 spring.datasource.username=secretfriends
 spring.datasource.password=secretfriends
 
-logging.level.org.springframework=info
+
+logging.level.org.springframework=debug
 logging.level.org.zerock=debug
 
 spring.jpa.hibernate.ddl-auto=update
