--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.datasource.username=secretfriends
 spring.datasource.password=secretfriends
 
 
-logging.level.org.springframework=debug
-logging.level.org.zerock=debug
+logging.level.org.springframework=info
+logging.level.org.dallili=debug
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
