chore: gitignore 수정

--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,8 @@ bin/
 !**/src/test/**/bin/
 
 ### IntelliJ IDEA ###
-application.properties 추가
-application.yml 추가
+application.properties
+application.yml
 .idea
 *.iws
 *.iml
