--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,8 @@ bin/
 ### IntelliJ IDEA ###
 application.properties
 application.yml
+application-prod.yml
+application-local.yml
 .idea
 *.iws
 *.iml
