--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,9 @@ spring:
       ddl-auto: update
       format_sql: true
       show-sql: true
+      
+  profiles:
+    active: local
 
 logging:
   level:
