--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -55,14 +55,14 @@ jobs:
     - name: Build with Gradle 
       run: ./gradlew build -x test
 
-    - name: Test with Gradle # test application build
-      run: ./gradlew test
+    # - name: Test with Gradle # test application build
+    #   run: ./gradlew test
 
-    - name: Publish Unit Test Results 
-      uses: EnricoMi/publish-unit-test-result-action@v1
-      if: ${{ always() }}
-      with:
-        files: build/test-results/**/*.xml
+    # - name: Publish Unit Test Results 
+    #   uses: EnricoMi/publish-unit-test-result-action@v1
+    #   if: ${{ always() }}
+    #   with:
+    #     files: build/test-results/**/*.xml
 
     # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
     # If your project does not have the Gradle Wrapper configured, you can use the following configuration to run Gradle with a specified version.
