--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,14 @@ dependencies {
     //Gson 라이브러리
     implementation 'com.google.code.gson:gson:2.8.9'
 
+    //스프링 시큐리티 관련 라이브러리
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+
+    //jjwt
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5',
+            'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
 }
 
 tasks.named('test') {
