--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -6,11 +6,11 @@
 # This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
 
-name: Java CI with Gradle
+name: Java CI&CD with Gradle
 
 on:
   push:
-    branches: ["develop"]
+    branches: ["settings-cd"]
   pull_request:
     branches: ["develop"]
 
@@ -55,14 +55,28 @@ jobs:
     - name: Build with Gradle 
       run: ./gradlew build -x test
 
-    # - name: Test with Gradle # test application build
-    #   run: ./gradlew test
+    # docker build & push to production
+    - name: Docker Build & Push to Prod
+      if: contains(github.ref, 'develop')
+      run: |
+        docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
+        docker build -f Dockerfile -t ${{secrets.DOCKER_USERNAME}}/${{secrets.DOCKER_REPOSITORY}} .
+        docker push ${{secrets.DOCKER_USERNAME}}/${{secrets.DOCKER_REPOSITORY}}
 
-    # - name: Publish Unit Test Results 
-    #   uses: EnricoMi/publish-unit-test-result-action@v1
-    #   if: ${{ always() }}
-    #   with:
-    #     files: build/test-results/**/*.xml
+    # deploy to EC2
+    - name: Deploy to EC2
+      uses: appleboy/ssh-action@master
+      with: 
+        host: ${{secrets.AWS_EC2_HOST}}
+        username: ec2-user
+        key: ${{secrets.AWS_EC2_KEY}}
+        script: |
+          sudo docker ps
+          sudo docker pull ${{secrets.DOCKER_USERNAME}}/${{secrets.DOCKER_REPOSITORY}}
+          sudo docker run -d -p 8081:8081 ${{secrets.DOCKER_USERNAME}}/${{secrets.DOCKER_REPOSITORY}}
+          sudo docker image prune -f
+    
+        
 
     # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
     # If your project does not have the Gradle Wrapper configured, you can use the following configuration to run Gradle with a specified version.
