cd: gradle.yml 설정

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -10,7 +10,7 @@ name: Java CI&CD with Gradle
 
 on:
   push:
-    branches: ["settings-cd"]
+    branches: ["develop"]
   pull_request:
     branches: ["develop"]
 
