cd: gradle.yml 설정
jwt 환경변수 설정 추가

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -10,7 +10,7 @@ name: Java CI&CD with Gradle
 
 on:
   push:
-    branches: ["develop"]
+    branches: ["settings-cd"]
   pull_request:
     branches: ["develop"]
 
@@ -46,6 +46,8 @@ jobs:
         spring.datasource.url: ${{secrets.AWS_RDS_HOST}}
         spring.datasource.username: ${{secrets.AWS_RDS_USERNAME}}
         spring.datasource.password: ${{secrets.AWS_RDS_PASSWORD}}
+        jwt.secret: ${{secrets.JWT_SECRET_KEY}}
+        JWT_SECRET_KEY: ${{secrets.JWT_SECRET_KEY}}
 
     # Configure Gradle for optimal use in GiHub Actions, including caching of downloaded dependencies.
     # See: https://github.com/gradle/actions/blob/main/setup-gradle/README.md
@@ -57,7 +59,7 @@ jobs:
 
     # docker build & push to production
     - name: Docker Build & Push to Prod
-      if: contains(github.ref, 'develop')
+      # if: contains(github.ref, 'develop')
       run: |
         docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
         docker build -f Dockerfile -t ${{secrets.DOCKER_USERNAME}}/${{secrets.DOCKER_REPOSITORY}}:prod .
@@ -71,12 +73,13 @@ jobs:
         username: ec2-user
         key: ${{secrets.AWS_EC2_KEY}}
         script: |
-          sudo docker ps
+          CONTAINER_ID=$(sudo docker ps -q --filter "publish=8080-8080")
+          if [ ! -z "$CONTAINER_ID" ]; then
+            sudo docker stop $CONTAINER_ID
+            sudo docker rm $CONTAINER_ID
+          fi
           sudo docker pull ${{secrets.DOCKER_USERNAME}}/${{secrets.DOCKER_REPOSITORY}}:prod
-          sudo docker run -d -p 8080:8080 ${{secrets.DOCKER_USERNAME}}/${{secrets.DOCKER_REPOSITORY}}:prod
-          sudo docker image prune -f
-    
-        
+          sudo docker run -d -p 8080:8080 -e TZ=Asia/Seoul ${{secrets.DOCKER_USERNAME}}/${{secrets.DOCKER_REPOSITORY}}:prod
 
     # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
     # If your project does not have the Gradle Wrapper configured, you can use the following configuration to run Gradle with a specified version.
