--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -10,7 +10,7 @@ name: Java CI&CD with Gradle
 
 on:
   push:
-    branches: ["settings-cd"]
+    branches: ["develop"]
   pull_request:
     branches: ["develop"]
 
@@ -59,7 +59,7 @@ jobs:
 
     # docker build & push to production
     - name: Docker Build & Push to Prod
-      # if: contains(github.ref, 'develop')
+      if: contains(github.ref, 'develop')
       run: |
         docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
         docker build -f Dockerfile -t ${{secrets.DOCKER_USERNAME}}/${{secrets.DOCKER_REPOSITORY}}:prod .
