--- a/build.gradle
+++ b/build.gradle
@@ -68,6 +68,9 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5',
             'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
+    //욕설 필터링 라이브러리
+    implementation 'io.github.vaneproject:badwordfiltering:1.0.0'
+
 }
 
 tasks.named('test') {
