--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -10,9 +10,9 @@ name: Java CI&CD with Gradle
 
 on:
   push:
-    branches: ["develop"]
+    branches: ["develop-testNotify"]
   pull_request:
-    branches: ["develop"]
+    branches: ["develop-testNotify"]
 
 
 permissions:
@@ -59,7 +59,7 @@ jobs:
 
     # docker build & push
     - name: Docker Build & Push
-      if: contains(github.ref, 'develop')
+      if: contains(github.ref, 'develop-testNotify')
       run: |
         docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
         docker build -f Dockerfile -t ${{secrets.DOCKER_USERNAME}}/${{secrets.DOCKER_REPOSITORY}}:dev .
