--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -48,6 +48,11 @@ jobs:
         spring.datasource.password: ${{secrets.AWS_RDS_PASSWORD}}
         jwt.secret: ${{secrets.JWT_SECRET_KEY}}
         JWT_SECRET_KEY: ${{secrets.JWT_SECRET_KEY}}
+        openai.organization.id: ${{secrets.OPENAI_ORGANIZATION_ID}}
+        openai.project.id: ${{secrets.OPENAI_PROJECT_ID}}
+        openai.api.key: ${{secrets.OPENAI_API_KEY}}
+        openai.api.url: ${{secrets.OPENAI_API_URL}}
+        openai.model: ${{secrets.OPENAI_MODEL}
 
     # Configure Gradle for optimal use in GiHub Actions, including caching of downloaded dependencies.
     # See: https://github.com/gradle/actions/blob/main/setup-gradle/README.md
