feat: 회원가입 인증 템플릿 메일 발송 기능 구현

--- a/build.gradle
+++ b/build.gradle
@@ -74,6 +74,9 @@ dependencies {
     //회원가입 이메일 인증
     implementation 'org.springframework.boot:spring-boot-starter-mail:3.2.2'
 
+    //thymeleaf
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:3.1.2'
+
 }
 
 tasks.named('test') {
