--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -10,9 +10,9 @@ name: Java CI&CD with Gradle
 
 on:
   push:
-    branches: ["develop"]
+    branches: ["main"]
   pull_request:
-    branches: ["develop"]
+    branches: ["main"]
 
 
 permissions:
