--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -70,7 +70,7 @@ jobs:
 
     # docker build & push
     - name: Docker Build & Push
-      if: contains(github.ref, 'develop')
+      if: contains(github.ref, 'main')
       run: |
         docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
         docker build -f Dockerfile -t ${{secrets.DOCKER_USERNAME}}/${{secrets.DOCKER_REPOSITORY}}:dev .
